Exclude link icon width from et2_url's width, avoiding unnecessary scrollbar

--- a/api/templates/default/etemplate2.css
+++ b/api/templates/default/etemplate2.css
@@ -2671,11 +2671,14 @@ ul.et2_nowrap, div.et2_nowrap{
 .et2_fullWidth, .et2_fullWidth span.et2_url_span {
 	position: relative;
 }
+span.et2_url_span input.et2_fullWidth {
+	width: calc(99% - 18px);
+}
 .et2_fullWidth a.et2_url {
 	position: absolute;
 	height: 16px;
 	right: -16px;
-	top: 8px;
+	top: 0px;
 }
 
 .et2_fullWidth input.et2_date_duration {
